Bug 10370 - Incorrect pixels read back if draw bitmap texture through Display list
Summary: Incorrect pixels read back if draw bitmap texture through Display list
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-21 21:49 UTC by Wei Wang
Modified: 2009-08-24 12:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
the test case (3.56 KB, text/plain)
2007-03-21 21:52 UTC, Wei Wang
Details

Description Wei Wang 2007-03-21 21:49:40 UTC
Version
=======
Mesa master, cset: 4bafc547df4af0b560dcc6b72c0a6c37d7754ab


Description
===========
Apply a 1x1 bitmap to a 1x1 texture, and draw a 1x1 square correspondingly. If this execution is buffered by display list and to be executed later by glCallList(), the pixel, which should show at foreground, read back is at background (we can discriminate fore/back ground by their colors). 

Misc
====
However, if the 1x1 bitmap is 0 (background), the pixel read back still shows at the background.
Comment 1 Wei Wang 2007-03-21 21:52:46 UTC
Created attachment 9254 [details]
the test case

If we the new the display list as GL_COMPILE, and execute the display list later,  this bug still happens.
Comment 2 Wei Wang 2007-03-21 21:59:27 UTC
This bug happens only when all the dri drivers are removed.
Comment 3 WuNian 2007-07-03 00:13:13 UTC
The bug does not exist now.
Comment 4 Adam Jackson 2009-08-24 12:26:15 UTC
Mass version move, cvs -> git


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.